WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
11573
REGRESSION: pressing option-left arrow while in suggestion popup moves the insertion point to the left
https://bugs.webkit.org/show_bug.cgi?id=11573
Summary
REGRESSION: pressing option-left arrow while in suggestion popup moves the in...
Alexey Proskuryakov
Reported
2006-11-11 11:02:57 PST
Steps to reproduce: 1. Start typing something in a text input (such as a Bugzilla field). 2. Press Option+Esc to display suggestion popup. 3. Press Option+Left Arrow (or Cmd+Option+Left Arrow). Results: the suggestion popup closes, and the insertion point moves one character to the left. Expected results (as in stock Safari): the suggestion popup closes, and the insertion point remains where it was. This may look minor from the description, but is pretty unpleasant in my experience.
Attachments
Don't move if there is no selection
(1.42 KB, patch)
2007-02-22 08:34 PST
,
mitz
mjs
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2006-11-11 11:56:48 PST
This only happens if previously typed characters already make a word. For example, type "the" in step 1.
Mark Rowe (bdash)
Comment 2
2007-01-16 19:08:21 PST
<
rdar://problem/4928632
>
mitz
Comment 3
2007-02-22 08:34:50 PST
Created
attachment 13315
[details]
Don't move if there is no selection Like the scrollbar active appearance bug, this bug is only a regression from Safari 2.0.4 in the sense that in TOT it affects form controls as well.
Maciej Stachowiak
Comment 4
2007-02-22 19:40:27 PST
Comment on
attachment 13315
[details]
Don't move if there is no selection r=me
Sam Weinig
Comment 5
2007-02-23 18:34:55 PST
Landed in
r19834
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug