        Reviewed by Maciej.

- fix http://bugs.webkit.org/show_bug.cgi?id=11573
          REGRESSION: pressing option-left arrow while in suggestion popup moves the insertion point to the left

        * WebView/WebHTMLView.mm:
        (-[WebTextCompleteController endRevertingChange:moveLeft:]):



Canonical link: https://commits.webkit.org/16675@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19834 268f45cc-cd09-0410-ab3c-d52691b4dbfc